[package]
name = "sigstore-watcher"
version = "0.1.0"
authors = ["pathtofile <git@tofile.dev>"]
edition = "2021"

[dependencies]
base64 = "0.13.1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }

openssl-sys = "0.9"
openssl = "0.10"
x509-parser = "0.14"
